<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:background="#002340"
    android:layout_height="match_parent"
    tools:context=".quizReview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/sumbitMessage"
        android:layout_width="wrap_content"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:layout_gravity="center_horizontal"
            android:onClick="shareResults"
            android:textSize="24sp"
            />
        <Button
            style="@style/Solutions"
            android:onClick="showDerivativeSolution1"
            android:text="@string/Derivative1" />
        <Button
            style="@style/Solutions"
            android:onClick="showDerivativeSolution2"
            android:text="@string/Derivative2"/>
        <Button
            style="@style/Solutions"
            android:onClick="showIntegralSolution1"
            android:text="@string/Integral1"/>
        <Button
            style="@style/Solutions"
            android:onClick="showLimitSolution1"
            android:text="@string/Limit1"/>
        <Button
            style="@style/Solutions"
            android:onClick="showLimitSolution2"
            android:text="@string/Limit2"/>
        <Button
            style="@style/Solutions"
            android:onClick="showLimitSolution3"
            android:text="@string/Limit3"/>
        <Button
            style="@style/Solutions"
            android:onClick="showAllTopicSolution8"
            android:text="@string/AllTopic8"/>
        <Button
            style="@style/Solutions"
            android:onClick="showAllTopicSolution9"
            android:text="@string/AllTopic9"/>
        <Button
            style="@style/Solutions"
            android:onClick="showDerivativeSolution6"
            android:text="@string/Derivative6"/>

    </LinearLayout>
</ScrollView>
